fixed bug where username in answers misaligns

--- a/src/components/home/viewQuestion/viewQuestion.css
+++ b/src/components/home/viewQuestion/viewQuestion.css
@@ -50,6 +50,7 @@
 .answer .username{
    color: var(--color-text);
    justify-self: flex-end;
+   grid-column: 2;
 }
 
 /* Answer owner */
